SFDC Automation/src/objects/Opportunity_Split__c.object
<CustomObject>
    <description>Used to display the National/Coordinated Account and Local Account splits on an opportunity.  This object will be used to perform pipeline reports.</description>
    <fields>
        <fullName>Migration_Counter__c</fullName>
        <externalId>true</externalId>
        <label>Migration Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OC_Amount__c</fullName>
        <formula>if( ISPICKVAL( Opportunity__r.StageName , &apos;Overcome Concerns&apos;), Pipeline_Split_Amount__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OC Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OC_Count__c</fullName>
        <formula>if( ISPICKVAL( Opportunity__r.StageName , &apos;Overcome Concerns&apos;),1 ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OC Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Opportunity for which the Split is valid</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Splits</relationshipLabel>
        <relationshipName>Opportunity_Splits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pipeline_Amount__c</fullName>
        <label>Pipeline Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pipeline_Split_Amount__c</fullName>
        <formula>Opportunity__r.EST_DEAL_VAL__c  *  Split_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pipeline Amount</inlineHelpText>
        <label>Pipeline Split Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SH_Amount__c</fullName>
        <formula>if( ISPICKVAL( Opportunity__r.StageName , &apos;Solution Hypothesis&apos;), Pipeline_Split_Amount__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SH Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SH_Count__c</fullName>
        <formula>if( ISPICKVAL( Opportunity__r.StageName , &apos;Solution Hypothesis&apos;), 1 ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SH Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Split_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Select the split percentage for this Sales Team Member</inlineHelpText>
        <label>Split %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <label>User Type</label>
        <picklist>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WSO_Amount__c</fullName>
        <formula>if( ISPICKVAL( Opportunity__r.StageName , &apos;Weigh Solution Options&apos;), Pipeline_Split_Amount__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WSO Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WSO_Count__c</fullName>
        <formula>if( ISPICKVAL( Opportunity__r.StageName , &apos;Weigh Solution Options&apos;),1 ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WSO Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ext_pipeline_id__c</fullName>
        <externalId>true</externalId>
        <label>ext_pipeline_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Split</label>
    <nameField>
        <displayFormat>SPLIT-{000000}</displayFormat>
        <label>Opportunity Split #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>requireSplitUser</fullName>
        <active>true</active>
        <errorConditionFormula>Sales_Team_Member__c == null</errorConditionFormula>
        <errorDisplayField>Sales_Team_Member__c</errorDisplayField>
        <errorMessage>Invalid Sales Team Member</errorMessage>
    </validationRules>
</CustomObject>